--- a/StandardThreadsSafetyTest.vcxproj
+++ b/StandardThreadsSafetyTest.vcxproj
@@ -72,7 +72,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="STSTMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConcurrentStack.h" />
